--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ numpy  # Example version - replace with your tested version
 plotly    # Example version - replace with your tested version
 pandas     # Example version - replace with your tested version
 Pillow     # Example version - replace with your tested version
-openai    # Example version - replace with your tested version
+openai   
 langchain
 PyMuPDF 
+PyGithub
